--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
         server: ftpupload.net
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
-        server-dir: /production.ariefrivaldi.my.id/htdocs
+        server-dir: /production.ariefrivaldi.my.id/htdocs/
